// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAllImports() dev and peer deps 1`] = `
Array [
  Array [
    "import {a} from 't'",
    "t",
  ],
  Array [
    "import s from 'z'",
    "z",
  ],
  Array [
    "import y from 'x'",
    "x",
  ],
]
`;

exports[`getAllImports() import then immediately export 1`] = `
Array [
  Array [
    "export { default } from './abc'",
    "./abc",
  ],
]
`;

exports[`getAllImports() import then immediately export as value 1`] = `
Array [
  Array [
    "export { default as something } from './abc'",
    "./abc",
  ],
]
`;

exports[`getAllImports() import then immediately export not default 1`] = `
Array [
  Array [
    "export { urd as something } from './abc'",
    "./abc",
  ],
]
`;

exports[`getAllImports() multiline imports 1`] = `
Array [
  Array [
    "import a from 'b'",
    "b",
  ],
  Array [
    "import c from 'd'",
    "d",
  ],
]
`;

exports[`getAllImports() no spaces 1`] = `
Array [
  Array [
    "import {a} from 'b'",
    "b",
  ],
]
`;

exports[`getAllImports() relativeImport 1`] = `
Array [
  Array [
    "import {a} from './c'",
    "./c",
  ],
]
`;

exports[`getAllImports() simple import 1`] = `
Array [
  Array [
    "import a from 'b'",
    "b",
  ],
]
`;

exports[`getAllImports() spread import 1`] = `
Array [
  Array [
    "import { a } from 'b'",
    "b",
  ],
]
`;

exports[`getAllImports() two imports 1`] = `
Array [
  Array [
    "import a from 'b'",
    "b",
  ],
  Array [
    "import c from 'd'",
    "d",
  ],
]
`;

exports[`getAllImports() two spread imports 1`] = `
Array [
  Array [
    "import { a, b } from 'c'",
    "c",
  ],
]
`;

exports[`getAllImports() two spread imports multiline 1`] = `
Array [
  Array [
    "import {
  a,
  b
} from 'c'",
    "c",
  ],
]
`;

exports[`getAllImports() using regex pattern 1`] = `
Array [
  Array [
    "import a from './c/somewhere'",
    "./c/somewhere",
  ],
  Array [
    "import b from './c/anywhere'",
    "./c/anywhere",
  ],
]
`;
